[package]
name = "esp32-tokio-demo"
version = "0.0.0"
authors = ["Josh Guilfoyle <jasta@devtcg.org>"]
edition = "2021"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[patch.crates-io]
tokio = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
socket2 = { git = "https://github.com/rust-lang/socket2", branch = "master" }

[dependencies]
esp-idf-svc = { version = "0.48", default-features = false }
embedded-svc = "*"
embedded-hal = "0.2.7"
log = "0.4.17"
anyhow = "1"
tokio = { version = "*", features = ["rt", "net", "io-util"] }
mio = { version = "0.8.11", features = ["log"] }

[features]
default = ["std", "embassy", "esp-idf-svc/native"]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[build-dependencies]
embuild = "0.31.4"
anyhow = "1"
